2014-06-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix trait summary in the MetaScore file header
	* Improve model stability in MetaCov model

2014-04-17  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix "--meta score" model outputs again... This time the results have been verified by Merlin

2014-04-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix "--meta score" model outputs on X chromosome hemizygous region
	* Add header in "--meta score" model outputs

2014-04-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* New parallele computation option (--thread) in vcf2kinship

2014-03-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: allele frequency calculation is faster

	* Improve: faster calculation of covariance in "--meta" models

2014-03-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: for "--meta recessive" model, output PVALUE = NA instead of 1 at monomorphic sites
	* Improve: frequency filtering for dosage and genotype
	* Change: Pvalue header for burden tests are now "Pvalue"

2014-03-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: greatly improve the speed for cov,dominant and recessive models
	* Fix: MetaCov model now have the correct suffix

2014-02-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change: for dominant/recessive model, automatically generate covariance

2014-02-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change: for X chrom, also use male to get AF
	* Support generating covariance matrix for dominant/recessive model
	* Change now, by default, rvtests drops samples with missing covariates (to resume previous behavior, imputing to the mean, use --imputeCov). 

2014-02-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise --useResidualAsPhenotype, now regress out intercept by default

2014-02-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
